refactor: 이전에 구독 취소한 프로젝트 재구독 기능 및 프로젝트 관련 응답에 구독 여부 추가 (#181)