@@ -18,13 +18,11 @@ import com.tebutebu.apiserver.pagination.internal.CursorPage;
 import com.tebutebu.apiserver.repository.CommentRepository;
 import com.tebutebu.apiserver.repository.ProjectRankingSnapshotRepository;
 import com.tebutebu.apiserver.repository.ProjectRepository;
+import com.tebutebu.apiserver.repository.SubscriptionRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.NoSuchElementException;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Repository
@@ -39,6 +37,8 @@ public class ProjectPagingRepositoryImpl implements ProjectPagingRepository {
 
     private final CursorPageFactory cursorPageFactory;
 
+    private final SubscriptionRepository subscriptionRepository;
+
     private final ObjectMapper objectMapper;
 
     private final QProject qProject = QProject.project;
@@ -49,7 +49,6 @@ public class ProjectPagingRepositoryImpl implements ProjectPagingRepository {
                 .orElseThrow(() -> new NoSuchElementException("snapshotNotFound"));
 
         List<RankingItemDTO> dtoList = parseSnapshotJson(snapshot);
-
         int start = calculateStartIndex(dtoList, req.getCursorId());
         int end = Math.min(start + req.getPageSize(), dtoList.size());
 
@@ -62,9 +61,12 @@ public class ProjectPagingRepositoryImpl implements ProjectPagingRepository {
                 .toList();
 
         Map<Long, Long> commentCountMap = commentRepository.findCommentCountMap(projectIds);
+        Set<Long> subscribedProjectIds = (req.getMemberId() != null)
+                ? new HashSet<>(subscriptionRepository.findSubscribedProjectIdsByMemberId(req.getMemberId()))
+                : Collections.emptySet();
 
         List<ProjectPageResponseDTO> projectPageResponseDtoList = projects.stream()
-                .map(proj -> toPageResponseDTO(proj, commentCountMap))
+                .map(proj -> toPageResponseDTO(proj, commentCountMap, subscribedProjectIds))
                 .collect(Collectors.toList());
 
         boolean hasNext = end < dtoList.size();
@@ -96,16 +98,17 @@ public class ProjectPagingRepositoryImpl implements ProjectPagingRepository {
                 .cursorTime(req.getCursorTime())
                 .pageSize(req.getPageSize())
                 .build();
-        CursorPage<Project> page = cursorPageFactory.create(spec);
 
-        List<Long> projectIds = page.items().stream()
-                .map(Project::getId)
-                .collect(Collectors.toList());
+        CursorPage<Project> page = cursorPageFactory.create(spec);
+        List<Long> projectIds = page.items().stream().map(Project::getId).toList();
         Map<Long, Long> commentCountMap = commentRepository.findCommentCountMap(projectIds);
+        Set<Long> subscribedProjectIds = (req.getMemberId() != null)
+                ? new HashSet<>(subscriptionRepository.findSubscribedProjectIdsByMemberId(req.getMemberId()))
+                : Collections.emptySet();
 
         List<ProjectPageResponseDTO> projectPageResponseDtoList = page.items().stream()
-                .map(proj -> toPageResponseDTO(proj, commentCountMap))
-                .collect(Collectors.toList());
+                .map(proj -> toPageResponseDTO(proj, commentCountMap, subscribedProjectIds))
+                .toList();
 
         return CursorPage.<ProjectPageResponseDTO>builder()
                 .items(projectPageResponseDtoList)
@@ -139,15 +142,11 @@ public class ProjectPagingRepositoryImpl implements ProjectPagingRepository {
                 .build();
 
         CursorPage<Project> page = cursorPageFactory.create(spec);
-
-        List<Long> projectIds = page.items().stream()
-                .map(Project::getId)
-                .toList();
-
+        List<Long> projectIds = page.items().stream().map(Project::getId).toList();
         Map<Long, Long> commentCountMap = commentRepository.findCommentCountMap(projectIds);
 
         List<ProjectPageResponseDTO> pageResponseDtoList = page.items().stream()
-                .map(proj -> toPageResponseDTO(proj, commentCountMap))
+                .map(proj -> toPageResponseDTO(proj, commentCountMap, Set.of(proj.getId())))
                 .toList();
 
         return CursorPage.<ProjectPageResponseDTO>builder()
@@ -171,9 +170,7 @@ public class ProjectPagingRepositoryImpl implements ProjectPagingRepository {
     }
 
     private int calculateStartIndex(List<RankingItemDTO> all, Long afterId) {
-        if (afterId == null) {
-            return 0;
-        }
+        if (afterId == null) return 0;
         for (int i = 0; i < all.size(); i++) {
             if (all.get(i).getProjectId().equals(afterId)) {
                 return i + 1;
@@ -182,7 +179,8 @@ public class ProjectPagingRepositoryImpl implements ProjectPagingRepository {
         return 0;
     }
 
-    private ProjectPageResponseDTO toPageResponseDTO(Project project, Map<Long, Long> commentCountMap) {
+    private ProjectPageResponseDTO toPageResponseDTO(Project project, Map<Long, Long> commentCountMap, Set<Long> subscribedIds) {
+        boolean isSubscribed = subscribedIds != null && subscribedIds.contains(project.getId());
         return ProjectPageResponseDTO.builder()
                 .id(project.getId())
                 .teamId(project.getTeam().getId())
@@ -198,6 +196,7 @@ public class ProjectPagingRepositoryImpl implements ProjectPagingRepository {
                 .givedPumatiCount(project.getTeam().getGivedPumatiCount())
                 .receivedPumatiCount(project.getTeam().getReceivedPumatiCount())
                 .badgeImageUrl(project.getTeam().getBadgeImageUrl())
+                .isSubscribed(isSubscribed)
                 .createdAt(project.getCreatedAt())
                 .modifiedAt(project.getModifiedAt())
                 .build();
